find functionality fixed
